2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/JThermometer.java
	(setShowValueLines): Removed,
	* source/org/jfree/chart/plot/ThermometerPlot.java
	(showValueLines): Removed,
	(setUnits(String)): Removed,
	(getShowValueLines): Likewise,
	(setShowValueLines): Likewise,
	(draw): Updated for removed code,
	(getMinimumVerticalDataValue): Removed,
	(getMaximumVerticalDataValue): Likewise,
	(equals): Updated for removed fields,
	* tests/org/jfree/chart/plot/junit/ThermometerPlotTests.java
	(testEquals): Updated for removed fields,
	(testSetUnits): Removed.
	
2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/ContourPlotUtilities.java: Removed,
	* source/org/jfree/chart/plot/ContourValuePlot.java: Likewise.
	
2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PiePlot.java
	(sectionPaint): Removed,
	(sectionOutlinePaint): Likewise,
	(sectionOutlineStroke): Likewise,
	(PiePlot(PieDataset)): Updated for removed fields,
	(lookupSectionPaint): No longer any override,
	(getSectionPaint): Removed,
	(setSectionPaint): Likewise,
	(lookupSectionOutlinePaint): No longer any override,
	(getSectionOutlinePaint): Removed,
	(setSectionOutlinePaint): Likewise,
	(lookupSectionOutlineStroke): No longer any override,
	(getSectionOutlineStroke): Removed,
	(setSectionOutlineStroke): Likewise,
	(drawItem): Updated for removed method,
	(equals): Updated for removed fields,
	(writeObject): Likewise,
	(readObject): Likewise,
	* tests/org/jfree/chart/plot/PiePlotTests.java
	(testEquals): Updated for removed fields.
	
2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/ColorPalette.java: Removed,
	* source/org/jfree/chart/plot/GreyPalette.java: Likewise,
	* source/org/jfree/chart/plot/RainbowPalette.java: Likewise,
	* tests/org/jfree/chart/plot/junit/ColorPaletteTests.java: Likewise,